# synthetic-dataset

./: CMakeLists.txt  README.md  build_box.py
src/: Branch.h  Log.h  generate_surface_layers.cpp
